--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@iconify-json/ph": "^1.1.5",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
