--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
 	},
 	"devDependencies": {
 		"@iconify-json/ph": "^1.1.5",
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "^1.36.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-netlify": "^1.0.5",
+		"@sveltejs/kit": "^1.22.3",
 		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
+		"eslint": "^8.46.0",
+		"eslint-config-prettier": "^8.9.0",
+		"eslint-plugin-svelte": "^2.32.4",
+		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
+		"svelte": "^4.1.1",
+		"svelte-check": "^3.4.6",
 		"svelte-dnd-action": "^0.9.24",
 		"typescript": "^5.0.0",
-		"unplugin-icons": "^0.16.3",
-		"vite": "^4.3.6",
+		"unplugin-icons": "^0.16.5",
+		"vite": "^4.4.7",
 		"vitest": "^0.32.2"
 	},
 	"type": "module",
