--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": false,
