--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,40 @@
 {
+	"plugins": ["prettier-plugin-svelte"],
+	"pluginSearchDirs": ["."],
 	"useTabs": true,
+	"arrowParens": "always",
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{
+			"files": ["*.svelte"],
+			"options": {
+				"parser": "svelte",
+				"bracketSameLine": true
+			}
+		},
+		{
+			"files": ["packages/*/README.md"],
+			"options": {
+				"useTabs": false,
+				"tabWidth": 2
+			}
+		},
+		{
+			"files": [
+				"**/CHANGELOG.md",
+				"**/.svelte-kit/**",
+				"documentation/**/*.md",
+				"packages/package/test/fixtures/**/expected/**/*",
+				"packages/package/test/watch/expected/**/*",
+				"packages/package/test/watch/package/**/*",
+				"packages/kit/src/core/prerender/fixtures/**/*",
+				"packages/migrate/migrations/routes/*/samples.md"
+			],
+			"options": {
+				"requirePragma": true
+			}
+		}
+	]
 }
