remove adapter-auto

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@fontsource-variable/readex-pro": "^5.0.5",
 		"@iconify-json/ph": "^1.1.5",
 		"@playwright/test": "^1.36.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-netlify": "^1.0.5",
 		"@sveltejs/kit": "^1.22.3",
 		"autoprefixer": "^10.4.14",
@@ -34,8 +34,8 @@
 		"typescript": "^5.0.0",
 		"unplugin-icons": "^0.16.5",
 		"vite": "^4.4.7",
-		"vitest": "^0.32.2",
-		"@fontsource-variable/readex-pro": "^5.0.5"
+		"vite-imagetools": "^5.0.6",
+		"vitest": "^0.32.2"
 	},
 	"type": "module"
 }
